# mcp-playground

./: .gitignore  README.md
mcp-server/: README.md
mcp-server-go/: CLAUDE.md  go.mod  main.go
mcp-server-python/: README.md  prompt.txt  pyproject.toml
mcp-server-python/src/card_server/: __init__.py  bigquery_client.py  server.py
mcp-server-ts/: README.md  package-lock.json  package.json
mcp-server-ts/src/: client.ts  index.ts  types.ts
mcp-server/src/: index.ts
